tests/ui/fail/loops.stderr
error: Potentially invalid expansion. Expected a `{`.
 --> tests/ui/fail/loops.rs:6:14
  |
6 |         loop loop {}
  |              ^^^^

error: Potentially invalid expansion. Expected an identifier, `Self`, `_`, `self`, `super`.
  --> tests/ui/fail/loops.rs:13:17
   |
13 |         while < 42 {}
   |                 ^^

error: Potentially invalid expansion. Expected a pattern, an identifier, `&`, `-`, `..=`, `..` or 10 others.
  --> tests/ui/fail/loops.rs:20:13
   |
20 |         for ! in in {}
   |             ^
